reapply correct .gitignore path

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,3 +4,6 @@ set -g default-terminal "screen-256color"
 set -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
+
+# Add mouse scroll
+set -g mouse on
