--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,3 +7,10 @@ bind-key C-a send-prefix
 
 # Add mouse scroll
 set -g mouse on
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
