add relative line numnbers, add vim-devicons for NERtree and rebind C-l to clear screen after prefix in Tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,3 @@
-set -g default-terminal "screen-256color"
-
 # Change prefix
 set -g prefix C-a
 unbind-key C-b
@@ -7,6 +5,9 @@ bind-key C-a send-prefix
 
 # Add mouse scroll
 set -g mouse on
+
+# rebind clear screen which is overwritten by vim-tmux-navigator
+bind C-l send-keys 'C-l'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
