--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -34,6 +34,9 @@ bind -n C-l run  "($is_vim && tmux send-keys C-l) || \
 
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"}}
 
+# Renumber windows when you delete one
+set-option -g renumber-windows on
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
