--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -37,6 +37,10 @@ bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"}}
 # Renumber windows when you delete one
 set-option -g renumber-windows on
 
+# Ctrl + Shift + left/right to swap windows to the left/
+bind-key -n  C-S-Left swap-window -t -1
+bind-key -n  C-S-Right swap-window -t +1
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
