fix tmux vim colors compatibility and change colorscheme

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,6 +3,8 @@ set -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
 
+#set -g default-terminal "screen-256color"
+
 # Add mouse scroll
 set -g mouse on
 
