--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,7 +3,9 @@ set -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
 
-#set -g default-terminal "screen-256color"
+# Allows use of true colors in Vim when using Tmux
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
 
 # Add mouse scroll
 set -g mouse on
@@ -11,6 +13,8 @@ set -g mouse on
 # rebind clear screen which is overwritten by vim-tmux-navigator
 bind C-l send-keys 'C-l'
 
+# Reload configuration
+bind r source-file ~/.tmux.conf
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -34,7 +38,7 @@ bind -n C-k run "($is_vim && tmux send-keys C-k) || \
 bind -n C-l run  "($is_vim && tmux send-keys C-l) || \
                           tmux select-pane -R"
 
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"}}
+bind-key -n 'C-\' if-shell "$is_vim" "send-keys 'C-\\'" "select-pane -l"
 
 # Renumber windows when you delete one
 set-option -g renumber-windows on
@@ -46,6 +50,7 @@ bind-key -n  C-S-Right swap-window -t +1
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
