prettier formatted coc-settings

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,3 +1,9 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": ["json", "javascript", "javascriptreact", "typescript", "typescriptReact"]
+  "coc.preferences.formatOnSaveFiletypes": [
+    "json",
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptReact"
+  ]
 }
