small fix to vimrc

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -4,7 +4,9 @@
     "javascript",
     "javascriptreact",
     "typescript",
-    "typescriptReact"
+    "typescriptReact",
+    "css",
+    "scss",
+    "html"
   ]
-  /*"tslint.autoFixOnSave": true*/
 }
